@@ -5,7 +5,7 @@
 
   <identifier value="org.openoffice.da.writer2latex.oxt"/>
 
-  <version value="0.9.4" />
+  <version value="1.0" />
 
   <dependencies>
     <OpenOffice.org-minimal-version value="2.2" d:name="OpenOffice.org 2.2"/>
@@ -14,6 +14,7 @@
   <display-name>
     <name lang="da">Writer2LaTeX eksportfiltre</name>
     <name lang="en">Writer2LaTeX export filters</name>
+    <name lang="de">Writer2Latex Exportfilter</name>
     <name lang="de">Filtres d'exportation Writer2LaTeX</name>
     <name lang="ru">Фильтры экспорта Writer2LaTeX</name>
     <name lang="uk">Фільтри експорту Writer2LaTeX</name>
@@ -22,6 +23,7 @@
   <extension-description>
     <src xlink:href="description/desc_da.txt" lang="da" />
     <src xlink:href="description/desc_en.txt" lang="en" />
+    <src xlink:href="description/desc_de.txt" lang="de" />
     <src xlink:href="description/desc_fr.txt" lang="fr" />
     <src xlink:href="description/desc_ru.txt" lang="ru" />
     <src xlink:href="description/desc_uk.txt" lang="uk" />
