@@ -1,0 +1,1 @@
+Writer2Latex bietet Witer und Calc  Exportfilter für XHTML und XHTML+MathML
