@@ -4,7 +4,7 @@
 			 
   <identifier value="org.openoffice.da.writer2xhtml.oxt" />
   
-  <version value="0.9.4" />
+  <version value="1.0" />
   
   <dependencies>
     <OpenOffice.org-minimal-version value="2.2" d:name="OpenOffice.org 2.2"/>
@@ -13,6 +13,7 @@
   <display-name>
     <name lang="da">Writer2xhtml eksportfiltre</name>
     <name lang="en">Writer2xhtml export filters</name>
+    <name lang="de">Writer2xhtml Exportfilter</name>
     <name lang="fr">Filtres d'exportation Writer2xhtml</name>
     <name lang="ru">Фильтры экспорта Writer2xhtml</name>
     <name lang="uk">Фільтри експорту Writer2xhtml</name>
@@ -21,6 +22,7 @@
   <extension-description>
     <src xlink:href="description/desc_da.txt" lang="da" />
     <src xlink:href="description/desc_en.txt" lang="en" />
+    <src xlink:href="description/desc_de.txt" lang="de" />
     <src xlink:href="description/desc_fr.txt" lang="fr" />
     <src xlink:href="description/desc_ru.txt" lang="ru" />
     <src xlink:href="description/desc_uk.txt" lang="uk" />
